Beta Version of ibus Driver applications is ready | I need to beauty my code because of the console logs | I need to also to check some functions because of the algorithms poliplokotita | Notifications/Settings/Menu/ UPDATES AND DELETES TO BE DONE

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -83,6 +83,7 @@
 		"title":"My Wallet"
 	
 },
+
 "routelist-routeHistory":{
 		"title":"Route History"
 	
@@ -158,6 +159,10 @@
 "myWallet-amount":{
 		"title":"Insert Amount"
 	
+},
+"myWallet-update":{
+	"title":"SEND"
+
 },
 "settings-distance":{
 		"title":"Distance Unit"
@@ -443,7 +448,7 @@
 		"title":"Password"
 	
 },
-"profile-gogoback"{
+"profile-gogoback":{
 		"title":"Go Back"
 },
 "profile-update":{
